--- a/blog_app/templates/blog/list.html
+++ b/blog_app/templates/blog/list.html
@@ -4,7 +4,11 @@
 
 {% block content %}
     {% for article in articles %}
-        <h2>{{ article.title }}</h2>
+        <h2>
+            <a href="{% url 'blog:article_details' article.id %}">
+                {{ article.title }}</h2>
+            </a>
+
 
         <p>
             Published {{ article.publish }} by {{ article.author }}
